openroast/static/mainStyle.css
/* Application window definitions. */
QMainWindow {
    background-color: #2e3138;
}

QDialog{
    background-color: #2e3138;
}

QToolBar {
    background-color: #444953;
    border-radius: 5px;
    margin: 12% 12% 0px 12%;
}

QPushButton#toolbar {
    border-radius: 5px;
    width: 100px;
    height: 30px;
    color: #fff;
    font-family: "Asap";
    font: bold;
    margin: 15px 5px 3px 5px;
    font-size: 12px;
    background-color: none;
}

QPushButton#toolbar:disabled {
      background-color: #23252b;
      color: #444953;
}

QPushButton#toolbarUtility {
    border-radius: 5px;
    width: 86px;
    height: 28px;
    color: #fff;
    font-family: "Asap";
    margin: 6px 4px 2px 4px;
    font-size: 11px;
    background-color: #23252b;
}

QPushButton#toolbarUtility:pressed {
    background-color: #047bad;
}

QPushButton#loginButton {
    border-radius: 5px;
    width: 100px;
    height: 36px;
    background-color: #8ab71b;
    color: #fff;
    margin: 8px;
    font-family: "Asap";
    font: bold;
    font-size: 12px;
}

QPushButton#loginButton:pressed {
    background-color: #649100;
}

QLabel#logo{
    color: #fff;
    padding: 15px 15px 3px 15px;
    font-family: "Asap";
    font-size: 20px;
    font: bold;
    text-transform: uppercase;
}

/* Element definitions. */
QPushButton {
    border-radius: 5px;
    width: 140px;
    height: 36px;
    background-color: #2aa1d3;
    color: #fff;
    margin: 5px;
    font-family: "Asap";
    font: bold;
    font-size: 12px;
    outline: none;
}

QPushButton:disabled {
    background-color: #444953;
}

QPushButton:pressed {
    background-color: #047bad;
}

QListWidget{
    font-family: "Asap";
    font: bold;
    color: #fff;
    border-radius: 5px;
    background-color: #444953;
    outline: none;
    font-size: 12px;
}

QListView {
    outline: none;
    text-align: center;
}

QListWidget::item {
    background-color: #444953;
    height: 30px;
    padding: 5px;
    border-top-width: 1px;
    border-color: #333841;
    border-style: solid;
}

QListWidget::item:selected {
    background-color: #23252b;
    color: #fff;
    border-top-color: #8ab71b;
    border-top-style: solid;
    border-top-width: 2px;
}

QLabel {
    color: #fff;
    font-family: "Asap";
    font: bold;
    font-size: 12px;
}

QComboBox {
    border-radius: 5px;
    width: 105px;
    height: 36px;
    background-color: #2aa1d3;
    color: #fff;
    margin: 2px;
    font-family: "Asap";
    font: bold;
    padding-left: 5px;
    font-size: 12px;
}

QComboBox:on { /* shift the text when the popup opens */
    padding: 5px;
}

QComboBox QAbstractItemView {
    border-radius: 5px;
    border: 1px;
    background-color: #047bad;
}

QComboBox::drop-down {
    width: 35px;
    background-color: #047bad;
    border-left-width: 1px;
    border-left-color: #1d86aa;
    border-left-style: solid;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

QComboBox::down-arrow {
    image: url(static/images/downArrow.png);
}

QSpinBox {
    background-color: #2aa1d3;
    border: 0px;
    border-radius: 5px;
    height: 36px;
    color: #fff;
    font-family: "Asap";
    font: bold;
    width: 105px;
}

QSpinBox:disabled {
    background-color: #444953;
}

QSpinBox::up-button {
    width: 35px;
    background-color: #2aa1d3;
    border-left-width: 2px;
    border-left-color: #1d86aa;
    border-left-style: solid;
    border-top-right-radius: 5px;
    image: url(static/images/upArrow.png);
}

QSpinBox::up-button:pressed {
    background-color: #047bad;
}

QSpinBox::up-button:disabled {
    background-color: #444953;
    border-left-color: #23252b;
}

QSpinBox::down-button {
    width: 35px;
    background-color: #2aa1d3;
    border-left-width: 2px;
    border-left-color: #1d86aa;
    border-left-style: solid;
    border-bottom-right-radius: 5px;
    image: url(static/images/downArrow.png);
}

QSpinBox::down-button:pressed {
    background-color: #047bad;
}

QSpinBox::down-button:disabled {
    background-color: #444953;
    border-left-color: #23252b;
}

QSlider::groove {
    border-radius: 5px;
    height: 8px;
}

QSlider::handle:horizontal {
    background-color: #fff;
    width: 16px;
    height: 12px;
    margin: -4px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
    border-radius: 8px;
}

QSlider::add-page:horizontal {
    background: #23252b;
    border-radius: 4px;
    height: 10px;
}

QSlider::sub-page:horizontal {
    background: #f0b017;
    border-radius: 4px;
    height: 10px;
}

QSlider::sub-page:horizontal:disabled {
    background: #444953;
}

QTreeView {
    background-color: #23252b;
    border-radius: 5px;
    color: #fff;
    font-family: "Asap";
    font: bold;
}

QTreeView::item:has-children {
    background-color: #444953;
    border-top-style: solid;
    border-top-width: 1px;
    border-top-color: #333841;
}

QTreeView::item::open:has-children {
    border-bottom-style: solid;
    border-bottom-width: 2px;
    border-bottom-color: #8ab71b;
    color: #fff;
}

QTreeView::item::has-children:selected {
    color: #fff;
}

QTreeView::item {
    background-color: #23252b;
    border-top-style: solid;
    border-top-width: 1px;
    border-top-color: #1d1f24;
    height: 36px;
}

QTreeView::item:!has-children:selected {
    border-left-style: solid;
    border-left-width: 2px;
    border-left-color: #2aa1d3;
    color: #fff;
}

QTextEdit {
    border-radius: 5px;
    background-color: #23252b;
    color: #fff;
    padding: 5px;
    font-family: "Asap";
    selection-background-color: #2aa1d3;
    selection-color: #fff;
}

QTimeEdit {
    background-color: #2aa1d3;
    border: 0px;
    border-radius: 5px;
    height: 36px;
    color: #fff;
    font-family: "Asap";
    font: bold;
    width: 105px;
}

QTimeEdit QSpinBox {
    background-color: #2aa1d3;
    border: 0px;
    border-radius: 5px;
    height: 36px;
    color: #fff;
    font-family: "Asap";
    font: bold;
    width: 105px;
}
/* ... */

